# cloudpmc-proto-firestore-loader

./: .gitignore  README.md  pyproject.toml  redis_index.txt  setup.cfg  setup.py  tox.ini
requirements/: base.in  base.txt  dev.in  dev.txt  test.txt
src/cloudpmc_proto_firestore_loader/: __init__.py  cli_main.py  click_types.py  firestore.py  helpers.py  loader.py  logger.py  timing.py  zstd.py
src/cloudpmc_proto_redis_loader/: __init__.py  cli_main.py  redis.py
tests/unit_tests/: test_cli_load.py  test_firestore_cli_load.py  test_redis_cli_load.py
