[metadata]
name = cloudpmc-proto-firestore-loader
maintainer = Andrey Kolotev
maintainer_email = kolotev@ncbi.nlm.nih.gov
home_page = https://github.com/kolotev/cloudpmc-proto-firestore-loader
classifiers =
        Development Status :: 1 - Planning
        Intended Audience :: Developers
        License :: Public Domain
        Natural Language :: English
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.9


[options]
python_requires = >=3.9,<4

[files]
packages_root = src
package_dir = src


[entry_points]
console_scripts =
    cloudpmc-proto-firestore-loader = cloudpmc_proto_firestore_loader.__init__:cli_main

;extra_files =
;  var/data/static/**
;  src/project/webpack-stats/**

; data_files =
;   var = var/**
;   webpack = src/project/webpack-stats/**

[bdist_wheel]
universal = true
